--- a/test-styles/_scss/_buttons.scss
+++ b/test-styles/_scss/_buttons.scss
@@ -8,7 +8,7 @@ button,
   overflow: hidden;
   margin: $spacing-8 0 0;
   padding: $spacing-8 $spacing-16;
-  border: 1px solid $color-primary;
+  border: 1px solid $color--primary;
   border-radius: 2rem;
   font-size: $small;
   font-weight: 700;
@@ -16,13 +16,13 @@ button,
   text-decoration: none;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: $color-secondary;
-  background-color: $color-primary;
+  color: $color--text-light;
+  background-color: $color--primary;
   @include transition(all);
 
   &:hover,
   &:focus {
-    color: $color-primary;
-    background-color: $color-secondary;
+    color: $color--primary;
+    background-color: $color--text-light;
   }
 }
