--- a/test-styles/_scss/_dark.scss
+++ b/test-styles/_scss/_dark.scss
@@ -9,14 +9,13 @@ label.checkbox {
 
   span {
     display: grid;
+    display: none;
     width: 1rem;
     height: 1rem;
-    color: $color-input;
 
     svg {
       width: 100%;
       height: 100%;
-      fill: $color-input;
     }
   }
 
@@ -31,7 +30,7 @@ label.checkbox {
     min-height: 1rem;
     margin: 0 $spacing-8;
     padding: 0;
-    border: 1px solid $color-input;
+    border: 1px solid;
     border-radius: 2rem;
     @include appearance(none);
 
@@ -43,7 +42,6 @@ label.checkbox {
       width: 0.625rem;
       height: 0.625rem;
       border-radius: 100%;
-      background: $color-input;
       content: "";
       @include transition(all);
     }
@@ -58,21 +56,19 @@ label.checkbox {
 // DARK MODE COLORS
 html.dark {
   color: white;
-  background-color: $color-background-dark;
+  background-color: $color--bg-dark;
 
   body {
 
     nav {
-      background-color: $color-background-dark;
+      background-color: $color--bg-dark;
     }
   }
 
   a {
-    color: $color-secondary;
 
     &:hover,
     &:focus {
-      color: $color-primary;
     }
   }
 }
@@ -83,11 +79,9 @@ html.dark nav {
 
   ul li,
   ul li a {
-    color: $color-nav;
 
     &:hover,
     &:focus {
-      color: $color-secondary;
     }
   }
 }
@@ -96,13 +90,10 @@ html.dark nav {
 // BUTTONS
 html.dark {
   button {
-    border-color: $color-secondary;
-    color: $color-primary;
-    background-color: $color-secondary;
+    color: $color--primary;
 
     &:hover,
     &:focus {
-      color: $color-secondary;
       background-color: transparent;
     }
   }
@@ -114,6 +105,5 @@ html.dark {
 
   input,
   select {
-    color: white;
   }
 }
