--- a/style/master.scss
+++ b/style/master.scss
@@ -1,7 +1,9 @@
 @import "_scss/base";
 @import "_scss/typography";
-@import "_scss/application-layout";
-@import "_scss/navigation";
-@import "_scss/details";
+@import "_scss/forms";
 @import "_scss/inputs";
+@import "_scss/layouts";
 @import "_scss/header";
+@import "_scss/footer";
+@import "_scss/navigation";
+@import "_scss/buttons";
