--- a/components/buttons.html
+++ b/components/buttons.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>UX Skunk Works | TigerConnect</title>
-  <!-- <base href="../"> -->
+  <title>AMEN Skunk Works Buttons | TigerConnect</title>
+  <base href="../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -13,65 +13,62 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style/master.min.css">
   <style>
     body {
       opacity: 0;
-      -webkit-transition: opacity 1.5s ease-in;
-      -moz-transition: opacity 1.5s ease-in;
-      -ms-transition: opacity 1.5s ease-in;
-      -o-transition: opacity 1.5s ease-in;
-      transition: opacity 1.5s ease-in;
+      -webkit-transition: opacity 1s ease-in;
+      -moz-transition: opacity 1s ease-in;
+      -ms-transition: opacity 1s ease-in;
+      -o-transition: opacity 1s ease-in;
+      transition: opacity 1s ease-in;
     }
 
     body.visible {
       opacity: 1;
-    }
-
-    article {
-      display: flex;
-      flex-direction: column;
-    }
-
-    @media (min-width: 40.5rem) {
-      article {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-      }
-
-      article section {
-        width: calc(100% / 2);
-      }
-    }
-
-    ul.contents {
-      padding: 0;
-      list-style-type: none;
-    }
-
-    ul.contents li {
-      padding: var(--spacing--8) 0 0;
     }
   </style>
 </head>
 
 <body>
   <header>
-    <h1>UX Skunk Works</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Index</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <article>
-      <h2 class="visuallyhidden">Contents</h2>
+      <h1>Buttons</h1>
       <section>
-        <h2>Components</h2>
-        <ul class="contents">
-          <li><a href="components/buttons.html">Buttons</a></li>
-          <li><a href="components/cards.html">Cards</a></li>
-          <li><a href="components/inputs.html">Inputs</a></li>
-          <li><a href="components/layouts.html">Layouts</a></li>
-        </ul>
+        <h2>Variants</h2>
+        <div class="row">
+          <button class="primary">Label</button>
+          <button class="secondary">Label</button>
+          <button class="tertiary">Label</button>
+        </div>
+      </section>
+      <section>
+        <h2>Icon Button Variants</h2>
+        <div class="row">
+          <button class="icon sm">
+            <span class="visuallyhidden">Label</span>
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
+          </button>
+          <button class="icon md">
+            <span class="visuallyhidden">Label</span>
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
+          </button>
+          <button class="icon lg">
+            <span class="visuallyhidden">Label</span>
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
+          </button>
+          <button class="icon xl">
+            <span class="visuallyhidden">Label</span>
+            <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-x"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18 6l-12 12" /><path d="M6 6l12 12" /></svg>
+          </button>
+        </div>
       </section>
     </article>
   </main>
