--- a/components/template.html
+++ b/components/template.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>UX Skunk Works | TigerConnect</title>
-  <!-- <base href="../"> -->
+  <title>AMEN Skunk Works | TigerConnect</title>
+  <base href="../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -18,60 +18,32 @@
   <style>
     body {
       opacity: 0;
-      -webkit-transition: opacity 1.5s ease-in;
-      -moz-transition: opacity 1.5s ease-in;
-      -ms-transition: opacity 1.5s ease-in;
-      -o-transition: opacity 1.5s ease-in;
-      transition: opacity 1.5s ease-in;
+      -webkit-transition: opacity 1s ease-in;
+      -moz-transition: opacity 1s ease-in;
+      -ms-transition: opacity 1s ease-in;
+      -o-transition: opacity 1s ease-in;
+      transition: opacity 1s ease-in;
     }
 
     body.visible {
       opacity: 1;
-    }
-
-    article {
-      display: flex;
-      flex-direction: column;
-    }
-
-    @media (min-width: 40.5rem) {
-      article {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-      }
-
-      article section {
-        width: calc(100% / 2);
-      }
-    }
-
-    ul.contents {
-      padding: 0;
-      list-style-type: none;
-    }
-
-    ul.contents li {
-      padding: var(--spacing--8) 0 0;
     }
   </style>
 </head>
 
 <body>
   <header>
-    <h1>UX Skunk Works</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Index</a></li>
+      </ul>
+    </nav>
   </header>
   <main>
     <article>
-      <h2 class="visuallyhidden">Contents</h2>
+      <h1></h1>
       <section>
-        <h2>Components</h2>
-        <ul class="contents">
-          <li><a href="components/buttons.html">Buttons</a></li>
-          <li><a href="components/cards.html">Cards</a></li>
-          <li><a href="components/inputs.html">Inputs</a></li>
-          <li><a href="components/layouts.html">Layouts</a></li>
-        </ul>
+
       </section>
     </article>
   </main>
