--- a/style/_scss/_header.scss
+++ b/style/_scss/_header.scss
@@ -1,15 +1,25 @@
 // HEADER
 header {
   display: flex;
+  flex-direction: row;
   align-items: center;
-  height: 3rem;
-  padding: $spacing-8;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0;
+  padding: $spacing-16;
 }
 
-// @media (min-width: 40rem) {
-//   header {
-//     input[type="search"] {
-//       width: calc(30% - 0.5rem);
-//     }
-//   }
-// }
+
+// HEADROOM
+.headroom {
+  @include transition(all, 0.5s, ease);
+  will-change: transform
+}
+
+.headroom--pinned {
+  @include transform(translateY(0));
+}
+
+.headroom--unpinned {
+  @include transform(translateY(-100vh));
+}
