--- a/style/_scss/_navigation.scss
+++ b/style/_scss/_navigation.scss
@@ -1,131 +1,29 @@
 // NAVIGATION
 nav {
-  z-index: 100;
-  padding: 0 $spacing-4;
-  background-color: white;
-
   ul {
     display: flex;
-    align-items: center;
     flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    position: relative;
-    overflow: hidden;
-    height: 100%;
-    font-size: $xsmall;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    list-style: none;
+    align-items: center;
+    flex-wrap: wrap;
+    font-size: $small;
+    line-height: 1.5;
+    list-style-type: none;
+    text-transform: uppercase;
 
     li {
-      padding: 0 $spacing-8;
+      padding: 0 $spacing-16 0 0;
 
-      a {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        text-align: center;
-        color: $color-nav;
-
-        span.icon {
-          display: grid;
-          width: 1.5rem;
-          height: 1.5rem;
-          margin-bottom: $spacing-4;
-          border-radius: 100%;
-          background: $color-nav;
-          @include transition(background);
-        }
-
-        &:hover,
-        &:focus {
-          color: $color-nav-hover;
-
-          span.icon {
-            background: $color-nav-hover;
-          }
-        }
-      }
-    }
-
-    li.views {
-      ul {
-        border-right: 1px solid $color-input;
-        border-left: 1px solid $color-input;
-      }
-    }
-  }
-}
-
-@media (min-width: 40rem) {
-  nav {
-    ul {
-      flex-direction: column;
-      justify-content: flex-end;
-
-      li {
-        padding: $spacing-8;
-
-        a {
-
-          span.icon {
-            width: 2.5rem;
-            height: 2.5rem;
-          }
-        }
-      }
-
-      li:first-of-type {
-        position: absolute;
-        top: 0;
-      }
-
-      li.views {
-        display: none;
-        ul {
-          display: none;
-        }
-      }
-    }
-  }
-}
-
-
-// NAVIGATION LOCATION SELECT
-nav {
-  ul {
-    li {
-      font-weight: 700;
-      color: $color-nav;
-
-      fieldset {
+      &:last-of-type {
         padding: 0;
-
-        select {
-          min-height: 1.5rem;
-          margin-bottom: $spacing-4;
-          padding: $spacing-4;
-          font-size: $small;
-        }
       }
     }
   }
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 35rem) {
   nav {
     ul {
-      li {
-        fieldset {
-          padding-top: $spacing-8;
-
-          select {
-            min-height: 2rem;
-          }
-        }
-      }
+      line-height: 1;
     }
   }
 }
